[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Menu/Options.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Emulogic-zrEw.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -129.0
margin_right = 172.0

[node name="MusicButton" type="Button" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 32.0
rect_min_size = Vector2( 192, 32 )
custom_fonts/font = SubResource( 2 )
text = "Music ON"
align = 0

[node name="SoundsButton" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 192.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "SFX ON"
align = 0

[node name="ApplyButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 192.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "Apply"
align = 0

[connection signal="pressed" from="VBoxContainer/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SoundsButton" to="." method="_on_SoundsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
